add link from about to index3eme essai

--- a/about.html
+++ b/about.html
@@ -10,8 +10,6 @@
       tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
     </p>
     <img src="images/polar_bear.jpg" alt="Polar bear">
-    <p>
-      <a href="https://skall77.github.io/website/"><em>Return to the index</em></a>.
-    </p>
+      <a href="https://skall77.github.io/website/">Return to the index</a>.
   </body>
 </html>
